8066875: VirtualSpace does not use large pages

Reviewed-by: stefank, tschatzl, anoll, thartmann